Login SignUp Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
-            <div class="form-design mt-5 justify-content-center">
+            <div class="form-design justify-content-center">
 
                 <!-- buildsupply logo -->
                 <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
