--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -18,8 +18,8 @@
                     </div>
 
                     <div class="terms-conditions__actions w-50 mx-auto mt-4 d-flex justify-content-center">
-                        <button class="btn btn-warning hollow-btn" (click)="logout()">Decline</button>
-                        <button class="btn btn-warning next-btn" (click)="acceptTerms()" >Accept</button>
+                        <button class="btn btn-warning hollow-btn m-r-5" (click)="logout()">Decline</button>
+                        <button class="btn btn-warning next-btn m-l-5" (click)="acceptTerms()" >Accept</button>
                     </div>
                 </div>
             </div>
