--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -5,7 +5,7 @@
         Issue to Indent
       </div>
 
-      <div class="col-xs-4 mid-head-top">
+      <div class="col-xs-5 mid-head-top">
         <span>
           {{issueToIndentDetails.materialName}}
         </span>
@@ -22,7 +22,7 @@
           {{issueToIndentDetails.materialUnit}}
         </span>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-1">
         <button type="button" class="close p-t-7" (click)="onNoClick()" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="row p-t-10 p-b-10 gray-border">
-          <div class="col-xs-3"></div>
+          <div class="col-xs-3">Indent Id</div>
           <div class="col-xs-2">Required Quantity</div>
           <div class="col-xs-2">Required Date</div>
           <div class="col-xs-2">Issued Quantity</div>
@@ -44,7 +44,7 @@
           <div formArrayName="forms" class="row p-t-10 p-b-10 gray-border" *ngFor="let indent of issueToIndentDetails.indentDetailList; let i = index; ">
             <div class="col-xs-3 formGroup p-t-12">
               <div>
-                Intend {{indent.indentId}}
+                 {{indent.indentId}}
               </div>
             </div>
             <div class="col-xs-2 formGroup p-t-12 text-align-center p-r-40">
