POP Overs Fixed across project Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="col-xs-6 text-right">
     <span class="p-r-5">
-      <span class=" m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer" (click)="openSupplierDialog(this.rfqData.rfqProjectsList[0].projectId)">
+      <span class=" m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer add-supplier-btn" (click)="openSupplierDialog(this.rfqData.rfqProjectsList[0].projectId)">
         <span class="font-size20">
           +
         </span>
