RFQ pop over done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -31,11 +31,11 @@
                 <div class="row text-align-center">
                     <div class="col-sm-12 p-t-10">
                         <div class="font-size20 font-bold blue-color p-5">3 Months Free Usage</div>
-                         <div class="font-size16 p-5">Sign Up to avail three months free trail</div>
+                         <div class="font-size16 p-5">Sign Up to avail three months free trial</div>
                     </div>
                      <div class="col-sm-12 p-t-15">
                         <div class="font-size16 p-l-5 p-r-5">You will be charged ₹9999/month</div>
-                         <div class="font-size16 p-l-5 p-r-5">post completion of your free trail</div>
+                         <div class="font-size16 p-l-5 p-r-5">post completion of your free trial</div>
                     </div>
                 </div>
 
