--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -115,7 +115,7 @@
                       {{ element.supplierList != null ? element.supplierList.length : "" }}
                     </div>
 
-                    <div class="show-detail-supplier" *ngIf="element.supplierList.length > 0">
+                    <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList.length > 0">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <mat-icon class="material-info">info</mat-icon>
                       <div id="detail-supplier">
@@ -205,7 +205,7 @@
                       {{ element.supplierList != null ? element.supplierList.length : "" }}
                     </div>
 
-                    <div class="show-detail-supplier" *ngIf="element.supplierList">
+                    <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <mat-icon class="material-info">info</mat-icon>
                       <div id="detail-supplier">
