--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -7,9 +7,7 @@
 <br />
 
 <div class="text-center">
-  <mat-checkbox [checked]="selectBuildsupplyAsSupplier" [(ngModel)]="selectBuildsupplyAsSupplier">
-    Do you want to take quotes from BuildSupply ?
-  </mat-checkbox>
+  Do you want to float rfq?
 </div>
 
 <div mat-dialog-actions>
