--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -1,19 +1,15 @@
 <form [formGroup]="form">
   <div class="row ">
-    <div class="col-xs-12 text-right p-b-10">
-      <span class="p-r-5">
-        <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="materialAdded()" type="button">Back</button>
-      </span>
-      <span>
-        <button mat-raised-button [disabled]="!(form.valid && counter > 0)" matStepperNext (click)="materialAdded()" class="main-background-color main-button color-white">
-          Next
+    <div class="col-xs-4 p-t-10 border-input">
+      <mat-form-field class=" p-l-20 input-search-padding-zero">
+        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
+        <button mat-button matSuffix mat-icon-button>
+          <mat-icon>search</mat-icon>
         </button>
-      </span>
+      </mat-form-field>
     </div>
-  </div>
-  <div class="row p-b-10">
-    <div class="col-sm-12">
-      <mat-form-field class="border-select pull-right m-r-2 custom-po-radio search-project-po">
+    <div class="col-sm-4 text-right">
+      <mat-form-field class="border-select select-project">
         <mat-select formControlName="selectedProject" placeholder="Search project Name" (selectionChange)="choosenProject($event)">
           <div class="display-flex">
             <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
@@ -28,6 +24,16 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+    </div>
+    <div class="col-xs-4 text-right">
+      <span class="p-r-5">
+        <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="materialAdded()" type="button">Back</button>
+      </span>
+      <span>
+        <button mat-raised-button [disabled]="!(form.valid && counter > 0)" matStepperNext (click)="materialAdded()" class="main-background-color main-button color-white">
+          Next
+        </button>
+      </span>
     </div>
   </div>
 </form>
@@ -46,7 +52,7 @@
           </a>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <table mat-table [dataSource]="poDetails[0].projectMaterialList" class="mat-elevation-z8 col-sm-12" formArrayName="formArr">
+      <table mat-table [dataSource]="poDetails[0].projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="mat-elevation-z8 col-sm-12" formArrayName="formArr">
         <ng-container matColumnDef="Material Name">
           <th mat-header-cell *matHeaderCellDef>Material Name</th>
           <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}">
