--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,7 +1,9 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
-      <div class="col-sm-12 m-t-5 ext-semi-bold text-left" *ngIf="this.mode === 'view'">PO is Approved by {{ this.poData.approverName }}</div>
+      <div class="col-sm-12 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
+        PO is Approved by {{ this.poData.poStatusChangedBy }} on {{ this.poData.poStatusChangedOn }}
+      </div>
       <div class="col-sm-12 m-t-5 text-right">
         <div *ngIf="this.mode === 'edit'">
           <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
