--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -87,13 +87,13 @@
 
   .supplierLevel {
     background-color: white;
-    .col-sm-2:first-child{
-      color: #5F5F5F;
+    .col-sm-2:first-child {
+      color: #5f5f5f;
       font-weight: 500;
     }
   }
 
-  .mat-expansion-panel:hover{
+  .mat-expansion-panel:hover {
     background-color: rgba(169, 174, 188, 0.21);
   }
 
@@ -106,7 +106,7 @@
     width: 100% !important;
   }
 
-  .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper {
     padding-top: 0px !important;
   }
 
@@ -114,8 +114,8 @@
     background-color: (169, 174, 188, 0.21) !important;
   }
 
-  .supplierLevel{
-    border: 1px solid #EDEBEB;
+  .supplierLevel {
+    border: 1px solid #edebeb;
     border-top: none;
   }
 
@@ -127,16 +127,16 @@
     font-weight: 500;
   }
 
-  .mat-accordion .mat-expansion-panel-header{
+  .mat-accordion .mat-expansion-panel-header {
     min-height: 50px;
   }
 
-  .w-12{
+  .w-12 {
     max-width: 12%;
     flex-basis: 12%;
   }
 
-  .margin-right:not(:last-child){
+  .margin-right:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -145,10 +145,10 @@
   .mat-row .mat-cell {
     min-width: 80px;
   }
-  tr.mat-header-row{
+  tr.mat-header-row {
     height: 45px;
   }
-  .mat-expansion-panel-header{
+  .mat-expansion-panel-header {
     min-height: 48px;
   }
 }
@@ -164,10 +164,16 @@
   background-color: (169, 174, 188, 0.21) !important;
 }
 
-.mat-horizontal-stepper-content{
-  .select-project{
-    .mat-form-field-wrapper{
+.mat-horizontal-stepper-content {
+  .select-project {
+    .mat-form-field-wrapper {
       padding-top: 0px !important;
     }
+  }
+}
+
+.mat-form-field-padding {
+  .mat-form-field-wrapper {
+    padding-top: 0px !important;
   }
 }
