--- a/src/app/features/first-login/add-user/add-user.component.html
+++ b/src/app/features/first-login/add-user/add-user.component.html
@@ -12,7 +12,7 @@
 
             <div formArrayName="other" *ngFor="let other of addUserForm.get('other').controls; let i = index">
               <div class="row add-invite-user-form" [formGroupName]="i">
-                <div class="col-md-6">
+                <div class="col-md-5">
                   <mat-form-field class="border-input w-100">
                     <input matInput type="email" placeholder="*Email" (input)="verifyEmail($event,addUserForm.controls.other.controls[i].controls['email'],i)" formControlName="email" />
                   </mat-form-field>
@@ -42,7 +42,7 @@
                   </mat-error>
                 </div> -->
 
-                <div class="col-md-3">
+                <div class="col-md-4">
                   <mat-form-field class="border-select w-100 role-input">
                     <mat-label>*Role</mat-label>
                     <mat-select formControlName="roleId">
@@ -57,8 +57,8 @@
                     Role is required
                   </mat-error>
                 </div>
-                <div class="col-md-1 text-center p-t-15" *ngIf="addUserForm.get('other').controls.length > 1">
-                  <a class="width-15-px p-l-5 cursor-pointer float-right-invite-delBtn" matTooltip="Delete" (click)="onDelete(i)">
+                <div class="col-md-1 text-center p-t-15">
+                  <a *ngIf="addUserForm.get('other').controls.length > 1" class="width-15-px p-l-5 cursor-pointer float-right-invite-delBtn" matTooltip="Delete" (click)="onDelete(i)">
                     <img src="../../../../assets/images/delete-button.png" />
                   </a>
                 </div>
