--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -64,10 +64,11 @@
             <th mat-header-cell *matHeaderCellDef>Required Date</th>
 
             <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field [formGroupName]="i" class="border-input">
-                <input matInput formControlName="dueDate" #ref [matDatepicker]="startDate" placeholder="Required Date"  (dateChange)="getStart(ref.value,i)"
+              
+              <mat-form-field [formGroupName]="i" class="border-input date-label-indent">
+                <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy"}}</span>
+                <input matInput hidden formControlName="dueDate" #ref [matDatepicker]="startDate" placeholder="Required Date"  (dateChange)="getStart(ref.value,i)"
                   [min]="minDate" (focus)="startDate.open()" readonly />
-                <!-- <span class="form-palceholder">{{ formatDate(materialForms.controls.forms.controls.dueDate.value) }}</span> -->
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                 <mat-datepicker #startDate></mat-datepicker>
               </mat-form-field>
