--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -177,3 +177,10 @@
     padding-top: 0px !important;
   }
 }
+
+.date-button {
+  .mat-button-wrapper {
+    padding-left: 3px !important;
+    padding-top: 4px !important;
+  }
+}
