--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -83,7 +83,10 @@
           <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
             <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field class="border-input date-label mat-form-field-padding" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
+              <mat-form-field
+                class="border-input date-label date-button mat-form-field-padding"
+                [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
+              >
                 <!-- <mat-label>Fullfil </mat-label> -->
                 <span class="form-placeholder">{{
                   materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
