--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -1,5 +1,5 @@
 <div class="row ">
-  <div class="col-xs-6">
+  <div class="col-xs-6 p-t-10">
     <mat-form-field class="input-search-padding-zero  border-input ">
       <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
       <button mat-button matSuffix mat-icon-button>
